[package]
name = "BtcBridge"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.3", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
hex-literal = "0.3"
lazy_static = "1.4"
serde_json = "1.0"
secp256k1-zkp = "0.10.1"
subxt = {version = "0.33.0"}
subxt-signer = {version = "0.33.0"}

light-bitcoin = { git = "https://github.com/wd30130/light-bitcoin", branch = "develop-2022", default-features = false }
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", branch = "master", default-features = false }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", tag = "bitcoin-0.32.0", default-features = false }