[package]
name = "popsicle-vrf"
authors= { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = "0.1.0"

[dependencies]
# Substrate
codec = { workspace = true, features = [ "derive", "std" ] }
sp-api = { workspace = true, features = [ "std" ] }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true, features = [ "std" ] }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

# Moonbeam
primitives-vrf = { workspace = true, features = [ "std" ] }

# Polkadot
polkadot-primitives = { workspace = true }

# Other
schnorrkel = { workspace = true, default-features = false, features = [ "preaudit_deprecated" ] }
log = "0.4.21"
