[package]
authors.workspace = true
description = "Provides on-chain randomness"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = 'pallet-randomness'
repository.workspace = true
version = "0.1.0"


[dependencies]
async-trait = { workspace = true }
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-inherents = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "hex/std",
  "codec/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-inherents/std",
  "log/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
