[package]
name = "pallet-randomness"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log = "0.4.21"
scale-info = { workspace = true, features = [ "derive" ] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
codec = { workspace = true, features = [ "derive" ] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
schnorrkel = { workspace = true }

# Local
primitives-vrf = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",

    "primitives-vrf/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "schnorrkel/std"
]
try-runtime = [ "frame-support/try-runtime" ]