[package]
name = "primitives-vrf"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-api = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-keystore = { workspace = true, optional = true }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-keystore",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = []