[package]
name = "primitives-vrf"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
scale-info = { workspace = true, features = [ "derive" ] }
codec = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-application-crypto = { workspace = true }

[features]
default = [ "std" ]
std = [
    "scale-info/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
    "sp-api/std",
]
runtime-benchmarks = []

